static/css/room.css
.player-block {
    display: flex;
    overflow: hidden;
    justify-content: center;
}

.player {
    position: relative;
    background: #000;
    box-shadow: 0 0 5px #000;
}

.player,
.player svg,
.player video {
    width: auto;  /* scale to *at most* fit the window while preserving aspect ratio */
    height: auto;
    max-width: 100%;
    max-height: calc(100vh - 8.2em);  /* - total height of .meta */
}

.player.has-video,
.player.has-video svg,
.player.has-video video {
    min-height: 200px;
}

.player.is-fullscreen,
.player.is-fullscreen svg,
.player.is-fullscreen video,
body.theatre .player-block,
body.theatre .player,
body.theatre .player svg,
body.theatre .player video {
    display: block;
    margin: 0;
    width: 100%;  /* scale to *exactly* fit the window while preserving aspect ratio */
    height: 100%;
    max-width: none;
    max-height: none;
}

.player[data-status="error"]:before,
.player[data-status="ended"]:before {
    content: '\f071';  /* exclamation-triangle */
}

.player .controls {
    display: flex;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 0 0.5em;
    background: rgba(0,0,0,0.7);  /* XXX maybe something else, like a gradient? */
    transition: transform 0.3s ease-out, opacity 0.3s ease-in-out;
}

body.hide-cursor .player.has-video[data-status="playing"] {
    cursor: none;
}

body.hide-cursor .player.has-video[data-status="playing"] .controls,
.player.has-video[data-status="playing"]:not(:hover):not(:active) .controls {
    opacity: 0;
    transform: translateY(100%);
}

.player .controls > :not(.button) {
    margin: 0.5em;  /* = padding-left = padding-right of `.player .controls` */
    white-space: nowrap;
}

.player .status {
    flex: 1;
    font-weight: bold;
    text-transform: uppercase;
}

.player .volume {
    position: relative;
    cursor: ew-resize;
}

.player .volume:before {
    content: ' ';
    display: block;
    border-top: 1.5em /* = line-height */ solid transparent;
    border-right: 6em solid rgba(255,255,255,0.3);
}

.player .volume .slider {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    border: 1px solid #fff;
    border-radius: 1px;
}

.player .mute:before {
    content: '\f028';  /* volume-up */
}

.player.muted .mute:before {
    content: '\f026';  /* volume-off */
}

.player .theatre:before {
    content: '\f065';  /* expand */
}

.player .fullscreen:before {
    content: '\f0b2';  /* arrows-alt */
}

.player .collapse:before {
    content: '\f066';  /* compress */
}

.player:not(.has-video) .controls {
    left: 2em;  /* = margin of .content = half of .player:before's width */
    right: 2em;
}

.player:not(.has-video):before {
    left: 0;
}

.player:not(.has-video),
.player:not(.has-video) svg,
.player:not(.has-video) video {
    width: 100%;
    height: 2.5em;
}

@media (min-width: 25em) {
    .player:not(.has-video) .status:before {
        content: 'no video';
        opacity: 0.5;
        margin-right: 1em;
        vertical-align: baseline;
    }
}

.meta .creator:before {
    content: 'by ';
}

.meta .created:before {
    content: 'on ';
}

.meta .viewers:before {
    font: normal 1em FontAwesome;
    content: '\f06e';  /* eye */
    margin-right: 0.5em;
}

.about {
    padding: 0 2em;
}

.chat {
    width: 20em;
    display: flex;
    z-index: 1;
    position: relative;
    flex-direction: column;
    background: #f3f3f3;
    box-shadow: 7px 0 10px -10px #000 inset;
    transition: transform 0.4s ease-in-out;
}

@media (max-width: 50em) {
    .chat {
        margin-right: -20em;
    }

    .chat .tab {
        position: absolute;
        left: -2em;
        bottom: 0;
        text-align: right;
        border-top: 2em solid transparent;
        border-right: 2em solid #222;
        transition: opacity 0.4s ease-in-out;
    }

    .chat:hover {
        transform: translateX(-100%);
    }

    .chat:hover .tab,
    body.theatre.hide-cursor .chat .tab {
        opacity: 0;
    }

    body.theatre .player .controls {
        padding-right: 2em;  /* +1em to move the "collapse" button from under the tab */
    }
}

.chat h1,
.chat .log,
.chat .offline-message {
    padding: 1em;
}

.chat h1 {
    margin: 0 2em;
    font-size: 1.2em;
    font-weight: bold;
    text-align: center;
    border-bottom: 1px solid #ddd;
}

.chat .log {
    flex: 1;
    margin: 0;
    list-style: none;
    word-wrap: break-word;
}

.chat .empty-message,
.chat .offline-message {
    color: #777;
}

.chat .name {
    font-weight: bold;
}

.chat form {
    padding: 0 1em 1em 1em;
}

.chat form > * {
    margin-top: 1em;
}

.chat .input {
    width: 100%;
}

.chat .ins-emoji:before {
    content: '\f118';  /* smile-o */
}

body.theatre .content {
    padding: 0;
    height: 100%;
}

body.theatre .chat {
    background: #111;
    color: #eee;
}

body.theatre .chat h1 {
    border-color: #333;
    color: #fff;
}

.player[data-status="playing"] svg,
.player:not([data-status="playing"]) video,
.player:not(.has-audio) .mute,
.player:not(.has-audio) .volume,
.player:not(.has-video) .theatre,
.player:not(.has-video) .fullscreen,
.player.is-fullscreen .theatre,
.player.is-fullscreen .fullscreen,
.chat .empty-message:not(:only-of-type),
.chat.online .offline-message,
.chat.logged-in .login-form,
.chat:not(.online) form,
.chat:not(.logged-in) .input-form,
body.theatre .content > :not(.player-block),
body.theatre .player .theatre,
body.theatre .player .fullscreen,
body:not(.theatre) .player:not(.is-fullscreen) .collapse,
body.no-fullscreen .player .fullscreen {
    display: none !important;
}

